# chronoscribe

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
config/: .env.example  categories.yaml  config.example.yaml
config/prompts/: analysis.txt  clarification.txt  transcription.txt
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  FEATURE_BACKLOG.md  INDEX.md  ROADMAP.md
docs/sdd/phase-1/: F1.1-watch-folder.md  F1.10-cli.md  F1.2-image-preprocessing.md  F1.3-transcription.md  F1.4-analysis.md  F1.5-clarification.md  F1.6-timeline.md  F1.7-categorization.md  F1.8-folder-generation.md  F1.9-database.md
roadmap/: WORK_STATUS.md
src/chronoscribe/: __init__.py  __main__.py  cli.py
src/chronoscribe/config/: __init__.py
src/chronoscribe/core/: __init__.py
src/chronoscribe/services/: __init__.py
src/chronoscribe/services/transcription/: __init__.py
src/chronoscribe/storage/: __init__.py
src/chronoscribe/utils/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
website/: index.html  package.json  tailwind.config.js
website/src/pages/: LandingPage.tsx
